--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,7 +1,26 @@
 <div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+  <h2><%= gettext "Welcome to %{name}", name: "presence_phoenix!" %></h2>
+  <p class="lead"><i>Nothing to see here!</i></p>
 </div>
+
+<!--
+<div class="row">
+  <div class="col-md-12 alert alert-info">
+    Hello, <span id="User"><%= @conn.params["user"] %></span>!
+  </div>
+  <div class="col-md-8">
+    <h2>Messages</h2>
+    <input type="text" id="NewMessage" placeholder="Type and press enter..." class="form-control">
+    <ul id="MessageList" class="list-unstyled"></ul>
+  </div>
+  <div  class="col-md-4">
+    <h2>Who’s Online</h2>
+    <ul id="UserList" class="list-unstyled">
+      <li>Loading online users...</li>
+    </ul>
+  </div>
+</div>
+-->
 
 <div class="row marketing">
   <div class="col-lg-6">
